# imaging-governance

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
branding/arbiter/: README.md
crates/govcore/: Cargo.toml  README.md  pyproject.toml
crates/govcore/src/: dicom_qc.rs  lib.rs  report.rs  seg_postcheck.rs  vcf_score.rs
data/qc-corpus/: manifest.json
data/qc-corpus/broken_geometry/: slice_01.dcm  slice_02.dcm  slice_03.dcm  slice_04.dcm  slice_05.dcm
data/qc-corpus/clean_control/: slice_01.dcm  slice_02.dcm  slice_03.dcm  slice_04.dcm  slice_05.dcm
data/qc-corpus/header_anomaly/: slice_01.dcm  slice_02.dcm  slice_03.dcm  slice_04.dcm  slice_05.dcm
data/qc-corpus/missing_slices/: slice_01.dcm  slice_02.dcm  slice_04.dcm  slice_05.dcm
data/qc-corpus/residual_phi/: slice_01.dcm  slice_02.dcm  slice_03.dcm  slice_04.dcm  slice_05.dcm
scripts/: build_govcore.sh  deploy_space.sh  eval_corpus.py  generate_corpus.py  render_gallery.py  smoke_import.py  space_smoke.py
spaces/01-dicom-qc/: Dockerfile  README.md  app.py  requirements.txt
spaces/02-seg-governance/: Dockerfile  README.md  app.py  requirements.txt
spaces/02-seg-governance/model/: mock_model.py
spaces/03-vcf-explorer/: Dockerfile  README.md  app.py  requirements.txt
spaces/03-vcf-explorer/examples/: sample.vcf
