[package]
name = "govcore"
version = "0.1.0"
description = "Deterministic governance core for medical-imaging / genomics model I/O (PyO3 module)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "govcore"
# cdylib -> native Python extension module via maturin.
# rlib  -> so `cargo test` can link the crate as a normal Rust library.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
pythonize = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Synthetic DICOM fixtures are generated in-test; no external data required.
